<resources>
    <string name="app_name">ChatMe</string>

    <string name="welcome">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="Login">Login Now</string>
    <string name="Sign_up">SignUp Now</string>
    <string name="dontHaveanAccount">Don`t have an account?  Sign Up</string>
    <string name="fullName">Full Name</string>
    <string name="phoneNumber">Mobile Phone Number</string>

    <string name="hintemail">abc@xyz.com</string>
    <string name="hintName">Binil Thomas</string>
    <string name="hintPhone">+91 1234567890</string>
    <string name="hintPasswd">Password@123</string>
    <string name="hintMsg">Type a message</string>

    <string name="error_name">Please enter a valid Name (allows letters, spaces, and hyphens)</string>
    <string name="error_phone">Please enter a valid  Phone Number (supports international formats)</string>
    <string name="error_email">Please enter a valid email address</string>
    <string name="error_password">Password at least 6 characters, 1 uppercase, 1 lowercase, 1 digit, 1 special character</string>

    <string name="success_signup">Success! Your account has been created!</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_user_logout">Logout</string>
    <string name="startconvorsation">Start Conversation!</string>
</resources>